import org.gradle.internal.logging.text.StyledTextOutput 
import org.gradle.internal.logging.text.StyledTextOutputFactory
import org.gradle.internal.logging.text.StyledTextOutput.Style

buildscript {
	ext {
		set('springVersion', '2.2.0.M6')
		set('springCloudVersion', 'Hoxton.M2') //'Greenwich.SR3')//'Hoxton.M2')
        set('springSleuthVersion', '2.2.0.BUILD-SNAPSHOT');
	}
    repositories {
        mavenLocal()
        jcenter()
        maven { url 'http://repo.spring.io/plugins-release' }
        maven { url 'https://repo.jenkins-ci.org/public/' } // only if using buildfiles/buildJenkins.gradle
        maven { url 'https://repo.spring.io/libs-milestone' } // only if using milestone spring stuff
        maven { url 'https://repo.spring.io/libs-snapshot' } // only if using snapshot spring stuff
        maven { url 'https://repo.spring.io/libs-snapshot-local' } // only if using snapshot spring stuff
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springVersion}" // only if using milestones, otherwise in plugins { } section
    }
}
plugins {
//	id 'org.springframework.boot' version '2.2.0.M6'
	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
	id 'java'
}
apply plugin: 'org.springframework.boot' // only if using milestones, otherwise in plugins { } section

group = 'com.example'
ext.group = 'group'
version = '0.0.1-SNAPSHOT'
ext.version = version
sourceCompatibility = JavaVersion.VERSION_11

repositories {
	jcenter()
	maven { url "https://repo.spring.io/milestone" } // only if using milestone spring stuff
	maven { url 'https://repo.spring.io/libs-snapshot' } // only if using snapshot spring stuff
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'

    implementation "io.zipkin.brave:brave:5.7.0"
    implementation "io.zipkin.brave:brave-instrumentation-http:5.7.0"
	implementation 'org.springframework.cloud:spring-cloud-sleuth-core'+":${springSleuthVersion}" // zipkin'
	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'+":${springSleuthVersion}" // zipkin'


	testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    testImplementation("org.junit.jupiter:junit-jupiter-api")
    testImplementation("org.junit.jupiter:junit-jupiter-params")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

compileJava {
    // options.compilerArgs += ["--add-modules", "java.xml.bind"]
    println "Gradle version: " + project.getGradle().getGradleVersion()
    println "Groovy version: " + GroovySystem.getVersion()
    println "javac  version: " + org.gradle.internal.jvm.Jvm.current() + ' with compiler args: ' + options.compilerArgs
    
}

test {
    useJUnitPlatform {
//        includeTags 'fast'
//        excludeTags 'app', 'integration', 'messaging', 'slow', 'trivial'
    }
    failFast = false
    ignoreFailures true
    reports.html.enabled = false

    testLogging {
        showStandardStreams = true
        exceptionFormat = 'full'
        events "PASSED", "FAILED", "SKIPPED" //, "STARTED" //, "standardOut", "standardError"
    }

    beforeTest { descriptor ->
        logger.lifecycle("Running test: " + descriptor)
    }
    // listen to standard out and standard error of the test JVM(s)
    onOutput { descriptor, event ->
        // logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message )
        event.message
    }
    afterSuite { desc, result ->
        if (!desc.parent) { // will match the outermost suite
            def out = services.get(StyledTextOutputFactory).create("an-ouput")
            if (result.failedTestCount <= 0) {
                out.style(Style.Success).println "\nTest Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
            } else {
                out.style(Style.Failure).println "\nTest Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
            }
        }
    }
}

task printClasspath(group:project.rootProject.ext.group, description:"print classpath") {
    dependsOn subprojects.build
    doLast {
        // filters only existing and non-empty dirs
        sourceSets.main.runtimeClasspath
            .filter { (it.isDirectory() && it.listFiles().length > 0) || it.isFile() }
            .each{ println it }
    }
}

